--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -7,41 +7,47 @@
     "start": "node dist/main.js",
     "build": "tsc -p tsconfig.json",
     "lint": "eslint \"src/**/*.{ts,js}\" --max-warnings=0",
-    "migration:generate": "typeorm-ts-node-commonjs migration:generate -d ./data-source.ts ./src/migrations/auto",
-    "migration:run": "typeorm-ts-node-commonjs migration:run -d ./data-source.ts",
-    "migration:revert": "typeorm-ts-node-commonjs migration:revert -d ./data-source.ts",
+    "migration:generate": "cross-env TS_NODE_PROJECT=tsconfig.typeorm.json typeorm-ts-node-commonjs migration:generate -d ./data-source.ts ./src/migrations/auto",
+    "migration:run": "cross-env TS_NODE_PROJECT=tsconfig.typeorm.json typeorm-ts-node-commonjs migration:run -d ./data-source.ts",
+    "migration:revert": "cross-env TS_NODE_PROJECT=tsconfig.typeorm.json typeorm-ts-node-commonjs migration:revert -d ./data-source.ts",
+    "seed": "ts-node scripts/seed.ts",
     "test": "cross-env NODE_ENV=test jest --runInBand"
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/jwt": "^11.0.1",
+    "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^10.0.0",
-    "@nestjs/typeorm": "^10.0.0",
-    "bcryptjs": "^2.4.3",
     "@nestjs/swagger": "^7.1.15",
-    "swagger-ui-express": "^5.0.0",
+    "@nestjs/typeorm": "^10.0.0",
+    "axios": "^1.13.2",
+    "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
-    "ioredis": "^5.4.1",
     "dotenv": "^16.3.1",
+    "ioredis": "^5.4.1",
     "mysql2": "^3.9.7",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.0",
+    "swagger-ui-express": "^5.0.0",
     "typeorm": "^0.3.20"
   },
   "devDependencies": {
-    "@types/node": "^20.0.0",
     "@types/bcryptjs": "^2.4.2",
+    "@types/jest": "^29.5.11",
+    "@types/node": "^20.0.0",
+    "@types/supertest": "^2.0.16",
+    "cross-env": "^7.0.3",
     "eslint": "^8.57.0",
+    "jest": "^29.7.0",
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.3.0",
-    "@types/jest": "^29.5.11",
-    "@types/supertest": "^2.0.16",
-    "cross-env": "^7.0.3",
-    "jest": "^29.7.0",
-    "supertest": "^6.3.3",
-    "ts-jest": "^29.1.1"
+    "typescript": "^5.3.0"
   }
 }
