预约功能，订单功能，会员权益和优惠券系统，活动和排行榜功能

--- a/apps/mp/app.json
+++ b/apps/mp/app.json
@@ -5,6 +5,10 @@
     "pages/reservation/index",
     "pages/reservation-list/index",
     "pages/menu/index",
+    "pages/order-list/index",
+    "pages/order-detail/index",
+    "pages/coupons/index",
+    "pages/events/index",
     "pages/member/index",
     "pages/points/index",
     "pages/ranking/index"
