小程序首页功能完善

--- a/apps/server/.env.example
+++ b/apps/server/.env.example
@@ -8,3 +8,29 @@ REDIS_HOST=127.0.0.1
 REDIS_PORT=6379
 REDIS_PASS=
 REDIS_DB=0
+
+# JWT Configuration
+JWT_SECRET=your_jwt_secret_key_here
+JWT_EXPIRES_IN=7d
+
+# API Configuration
+API_BASE_URL=http://localhost:3000
+PORT=3000
+
+# WeChat Mini Program
+WECHAT_APP_ID=your_wechat_app_id
+WECHAT_APP_SECRET=your_wechat_app_secret
+
+# WeChat Pay Configuration
+WECHAT_MCH_ID=your_merchant_id
+WECHAT_API_KEY=your_api_key
+WECHAT_API_V3_KEY=your_api_v3_key_32_characters
+WECHAT_CERT_PATH=./certs/apiclient_cert.pem
+WECHAT_CERT_KEY_PATH=./certs/apiclient_key.pem
+WECHAT_NOTIFY_URL=https://your-domain.com/payment/wechat-callback
+
+# Notes:
+# 1. Download WeChat Pay certificates from merchant platform
+# 2. Place certificate files in ./certs/ directory
+# 3. WECHAT_NOTIFY_URL must be a publicly accessible HTTPS URL
+# 4. Test mode is automatically enabled if configuration is incomplete
